Connected to MongoDb Succesfully

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 port = 5000
+
+mongoDBURI= mongodb+srv://jamesowiti24:ZgjPYRWClOvIBNRW@nodeexpresscluster.i1gbv.mongodb.net/?retryWrites=true&w=majority&appName=NodeExpressCluster
