--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "author": "",
   "license": "ISC",
+  "proxy": "http://localhost:5173",
   "dependencies": {
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongodb": "6.15",
